<resources>
    <string name="app_name">iTag One</string>
    <string name="channel_disconnect">Disconnections</string>
    <string name="channel_connect">Connections</string>
    <string name="empty" translatable="false" />

    <string name="hello_no_ble_fragment">Your device has no Bluetooth adapter</string>

    <string name="request_permission_title">Permission required</string>
    <string name="request_location_permission">Starting from Android 6.0 Marshmallow the system requires location permission in order to scan for Bluetooth LE device.\\nYou will have to restart scann process after the giving the access.</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_forget">The device will be forgotten, are you sure? You will be able to reconnect this device and remember it in any moment though.\n\nForget?</string>
    <string name="confirm_disconnect">Flinging with your finger you requested iTag to be disconnected.\nThis is not dangerous, the iTag will not be forgotten and you will be able to connect it back with the same side-to-side fling.\n\nDo you really want disconnect iTag?</string>
    <string name="change_name">iTag\'s settings</string>
    <string name="itag_name">iTag\'s Name</string>
    <string name="itag_disconnect_alarm_delay">Disconnect alarm delay</string>
    <string name="itag_connection_mode">Connection mode</string>

    <string name="itag_alarm_mode">Alarm mode</string>

    <string-array name="itag_connection_modes">
        <item>Active mode</item>
        <item>Passive mode</item>
    </string-array>

    <string-array name="itag_alarm_delays">
        <item>No delay</item>
        <item>3 sec</item>
        <item>5 sec</item>
        <item>10 sec</item>
    </string-array>

    <string-array name="itag_alarm_modes">
        <item>No alarm</item>
        <item>Alarm when out of range</item>
        <item>Alarm when in range</item>
        <item>Alarm on both</item>
    </string-array>

    <string name="itag_alarm_delay_0">No delay</string>
    <string name="itag_alarm_delay_3">3 sec</string>
    <string name="itag_alarm_delay_5">5 sec</string>
    <string name="itag_alarm_delay_10">10 sec</string>
    <string name="itag_alarm_delay_description">The alarm delay will prevent itag from buzzing on very short disconnection.</string>
    <!--<string name="itag_connection_mode_description">Active mode will connect to your iTag device when it is in range, while passive mode will only *listen* for iTag\'s broadcasts.</string>-->
    <string name="manage_alert">Enable/disable Alert on disconnect</string>

    <string name="scanning">Scanning for iTags&#8230;</string>
    <string name="scanning_new">Scanning for new iTags&#8230;</string>
    <string name="scanning_more">Scanning for more iTags&#8230;</string>
    <string name="scanning_stopped">Scanning finished</string>

    <string name="color">Change iTag color</string>
    <string name="color_label">Color</string>
    <string name="mute">Mute</string>
    <string name="start_scan">Scan for new iTags</string>
    <string name="rememebr">Remember iTag</string>
    <string name="forget">Forget iTag</string>
    <string name="itag">Connected iTag</string>

    <string name="connect">iTag will connect</string>
    <string name="disconnect">iTag will be disconnected</string>

    <string name="rssi">Signal strength: %d</string>

    <string name="unknown">Unknown</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="gold">Gold</string>
    <string name="blue">Blue</string>

    <string name="service_in_background">Double click iTag\'s button to find the phone</string>
    <string name="service_description">Click iTag\'s image to make the tag to ring.</string>

    <string name="notify_disconnect">%s disconnected</string>
    <string name="notify_connect">%s connected</string>
    <string name="click_to_silent">Click to stop alarm</string>

    <string name="help_longpress">Long Press to Find the iTag</string>

    <string name="help_scan">You have no iTag devices connected yet.\n\nClick "Scan" button above to start searching.</string>

    <string name="try_enable_bt">Bluetooth is turning on</string>
    <string name="try_enable_bt_failed">You need to Enable Bluetooth manually in the Device Settings.</string>
    <string name="open_bt_settings">Turn on Bluetooth</string>

    <string name="bt_disabled">Off</string>
    <string name="bt_connecting">Connecting</string>
    <string name="bt_disconnecting">Disconnecting</string>
    <string name="bt_setup">Lost</string>
    <string name="bt_call">Reading/writing</string>
    <string name="bt">Linked</string>
    <string name="bt_unk">Faint</string>
    <string name="bt_lost">Lost</string>
    <string name="bt_disconnected" translatable="false">Disconnected</string>
    <string name="bt_scanning" translatable="false">Scanning</string>
    <string name="last_seen">Last+seen+here+%d+%s+ago</string>

    <string name="not_connected">Not connected</string>
    <string name="status133">The device seems to have a problem. Anti lost feature may fail.</string>

    <string name="no_geo_activity">It looks like your device does not have any Map location viewer</string>
    <string name="can_not_get_gps_location">iTag One could not get exact location because GPS disabled for this application</string>

    <string name="uint_sec" translatable="false"> sec </string>
    <string name="uint_min" translatable="false"> min </string>
    <string name="uint_hour" translatable="false"> hr </string>

    <string name="menu_app_exit">Shut down</string>

    <string name="freq_hour_1">1 hour</string>
    <string name="freq_min_30">Half an hour</string>
    <string name="freq_min_15">15 minutes</string>
    <string name="freq_min_5">5 minutes</string>
    <string name="freq_min_1">1 minute</string>
    <string name="freq_sec_15">15 seconds</string>
    <string name="freq_sec_5">5 seconds</string>
    <string name="freq_sec_1">1 second</string>
    <string name="off">Turn off</string>
    <string name="about_wt">About WayToday</string>
    <string name="freq_continuously">Continuously</string>
    <string name="waytoday">WayToday</string>
    <string name="trackid">WayToday ID:</string>
    <string name="wt_new_id">Change ID</string>
    <string name="wt_share">Share location</string>
    <string name="wt_map">Show on map</string>
    <string name="share_title">Share via…</string>
    <string name="share_link"><![CDATA[Track my location by clicking https://way.today/#%1$s!30m or use ID %1$s on the site https://way.today]]></string>
    <string name="share_subj">WayToday location note</string>
    <string name="about_ok">Install WayToday</string>
    <string name="about_cancel">Close</string>
    <string name="about_message">WayToday stores the last 500 locations of the phone for 2 weeks or while the ID is not changed.\n\nYou can track your iTag on https://way.today with this application or install the standalone app which does not require the iTag.\n\nWe recommend to give it a try because of some nice features iTag One does not have.</string>
    <string name="disable_wt">Remove it</string>
    <string name="disable_wt_msg">This action will remove and disable WayToday forever.\n\nThe only way to restore the tracking is removing and re-installing the application.</string>
    <string name="disable_wt_ok">Disable WayToday</string>

    <string name="soundmode_on">Speaker alarm</string>
    <string name="soundmode_vibration">Vibration alarm</string>
    <string name="soundmode_off">No alarm</string>

    <string name="mode_passive">Mode: Passive</string>
    <string name="mode_active">Mode: Active</string>
</resources>
